lalala-compiler/antlr/DZGParser.cpp

// Generated from DZG.g4 by ANTLR 4.7


#include "DZGListener.h"
#include "DZGVisitor.h"

#include "DZGParser.h"


using namespace antlrcpp;
using namespace antlr4;

DZGParser::DZGParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

DZGParser::~DZGParser() {
  delete _interpreter;
}

std::string DZGParser::getGrammarFileName() const {
  return "DZG.g4";
}

const std::vector<std::string>& DZGParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& DZGParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- PrimaryExpressionContext ------------------------------------------------------------------

DZGParser::PrimaryExpressionContext::PrimaryExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DZGParser::PrimaryExpressionContext::Identifier() {
  return getToken(DZGParser::Identifier, 0);
}

tree::TerminalNode* DZGParser::PrimaryExpressionContext::Constant() {
  return getToken(DZGParser::Constant, 0);
}

std::vector<tree::TerminalNode *> DZGParser::PrimaryExpressionContext::StringLiteral() {
  return getTokens(DZGParser::StringLiteral);
}

tree::TerminalNode* DZGParser::PrimaryExpressionContext::StringLiteral(size_t i) {
  return getToken(DZGParser::StringLiteral, i);
}

DZGParser::ExpressionContext* DZGParser::PrimaryExpressionContext::expression() {
  return getRuleContext<DZGParser::ExpressionContext>(0);
}

DZGParser::CompoundStatementContext* DZGParser::PrimaryExpressionContext::compoundStatement() {
  return getRuleContext<DZGParser::CompoundStatementContext>(0);
}


size_t DZGParser::PrimaryExpressionContext::getRuleIndex() const {
  return DZGParser::RulePrimaryExpression;
}

void DZGParser::PrimaryExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DZGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPrimaryExpression(this);
}

void DZGParser::PrimaryExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DZGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPrimaryExpression(this);
}


antlrcpp::Any DZGParser::PrimaryExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DZGVisitor*>(visitor))
    return parserVisitor->visitPrimaryExpression(this);
  else
    return visitor->visitChildren(this);
}

DZGParser::PrimaryExpressionContext* DZGParser::primaryExpression() {
  PrimaryExpressionContext *_localctx = _tracker.createInstance<PrimaryExpressionContext>(_ctx, getState());
  enterRule(_localctx, 0, DZGParser::RulePrimaryExpression);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    setState(127);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(112);
      match(DZGParser::Identifier);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(113);
      match(DZGParser::Constant);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(115); 
      _errHandler->sync(this);
      alt = 1;
      do {
        switch (alt) {
          case 1: {
                setState(114);
                match(DZGParser::StringLiteral);
                break;
              }

        default:
          throw NoViableAltException(this);
        }
        setState(117); 
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
      } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(119);
      match(DZGParser::T__0);
      setState(120);
      expression(0);
      setState(121);
      match(DZGParser::T__1);
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(123);
      match(DZGParser::T__0);
      setState(124);
      compoundStatement();
      setState(125);
      match(DZGParser::T__1);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdentifierListContext ------------------------------------------------------------------

DZGParser::IdentifierListContext::IdentifierListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DZGParser::IdentifierListContext::Identifier() {
  return getToken(DZGParser::Identifier, 0);
}

DZGParser::IdentifierListContext* DZGParser::IdentifierListContext::identifierList() {
  return getRuleContext<DZGParser::IdentifierListContext>(0);
}


size_t DZGParser::IdentifierListContext::getRuleIndex() const {
  return DZGParser::RuleIdentifierList;
}

void DZGParser::IdentifierListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DZGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIdentifierList(this);
}

void DZGParser::IdentifierListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DZGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIdentifierList(this);
}


antlrcpp::Any DZGParser::IdentifierListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DZGVisitor*>(visitor))
    return parserVisitor->visitIdentifierList(this);
  else
    return visitor->visitChildren(this);
}


DZGParser::IdentifierListContext* DZGParser::identifierList() {
   return identifierList(0);
}

DZGParser::IdentifierListContext* DZGParser::identifierList(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  DZGParser::IdentifierListContext *_localctx = _tracker.createInstance<IdentifierListContext>(_ctx, parentState);
  DZGParser::IdentifierListContext *previousContext = _localctx;
  size_t startState = 2;
  enterRecursionRule(_localctx, 2, DZGParser::RuleIdentifierList, precedence);

    

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(130);
    match(DZGParser::Identifier);
    _ctx->stop = _input->LT(-1);
    setState(137);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        _localctx = _tracker.createInstance<IdentifierListContext>(parentContext, parentState);
        pushNewRecursionContext(_localctx, startState, RuleIdentifierList);
        setState(132);

        if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
        setState(133);
        match(DZGParser::T__2);
        setState(134);
        match(DZGParser::Identifier); 
      }
      setState(139);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

DZGParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

DZGParser::AssignmentExpressionContext* DZGParser::ExpressionContext::assignmentExpression() {
  return getRuleContext<DZGParser::AssignmentExpressionContext>(0);
}

DZGParser::ExpressionContext* DZGParser::ExpressionContext::expression() {
  return getRuleContext<DZGParser::ExpressionContext>(0);
}


size_t DZGParser::ExpressionContext::getRuleIndex() const {
  return DZGParser::RuleExpression;
}

void DZGParser::ExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DZGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpression(this);
}

void DZGParser::ExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DZGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpression(this);
}


antlrcpp::Any DZGParser::ExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DZGVisitor*>(visitor))
    return parserVisitor->visitExpression(this);
  else
    return visitor->visitChildren(this);
}


DZGParser::ExpressionContext* DZGParser::expression() {
   return expression(0);
}

DZGParser::ExpressionContext* DZGParser::expression(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  DZGParser::ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, parentState);
  DZGParser::ExpressionContext *previousContext = _localctx;
  size_t startState = 4;
  enterRecursionRule(_localctx, 4, DZGParser::RuleExpression, precedence);

    

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(141);
    assignmentExpression();
    _ctx->stop = _input->LT(-1);
    setState(148);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
        pushNewRecursionContext(_localctx, startState, RuleExpression);
        setState(143);

        if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
        setState(144);
        match(DZGParser::T__2);
        setState(145);
        assignmentExpression(); 
      }
      setState(150);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- AssignmentExpressionContext ------------------------------------------------------------------

DZGParser::AssignmentExpressionContext::AssignmentExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

DZGParser::ConditionalExpressionContext* DZGParser::AssignmentExpressionContext::conditionalExpression() {
  return getRuleContext<DZGParser::ConditionalExpressionContext>(0);
}

DZGParser::UnaryExpressionContext* DZGParser::AssignmentExpressionContext::unaryExpression() {
  return getRuleContext<DZGParser::UnaryExpressionContext>(0);
}

DZGParser::AssignmentOperatorContext* DZGParser::AssignmentExpressionContext::assignmentOperator() {
  return getRuleContext<DZGParser::AssignmentOperatorContext>(0);
}

DZGParser::AssignmentExpressionContext* DZGParser::AssignmentExpressionContext::assignmentExpression() {
  return getRuleContext<DZGParser::AssignmentExpressionContext>(0);
}

tree::TerminalNode* DZGParser::AssignmentExpressionContext::DigitSequence() {
  return getToken(DZGParser::DigitSequence, 0);
}


size_t DZGParser::AssignmentExpressionContext::getRuleIndex() const {
  return DZGParser::RuleAssignmentExpression;
}

void DZGParser::AssignmentExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DZGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssignmentExpression(this);
}

void DZGParser::AssignmentExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DZGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssignmentExpression(this);
}


antlrcpp::Any DZGParser::AssignmentExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DZGVisitor*>(visitor))
    return parserVisitor->visitAssignmentExpression(this);
  else
    return visitor->visitChildren(this);
}

DZGParser::AssignmentExpressionContext* DZGParser::assignmentExpression() {
  AssignmentExpressionContext *_localctx = _tracker.createInstance<AssignmentExpressionContext>(_ctx, getState());
  enterRule(_localctx, 6, DZGParser::RuleAssignmentExpression);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(157);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(151);
      conditionalExpression();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(152);
      unaryExpression();
      setState(153);
      assignmentOperator();
      setState(154);
      assignmentExpression();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(156);
      match(DZGParser::DigitSequence);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConditionalExpressionContext ------------------------------------------------------------------

DZGParser::ConditionalExpressionContext::ConditionalExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

DZGParser::LogicalOrExpressionContext* DZGParser::ConditionalExpressionContext::logicalOrExpression() {
  return getRuleContext<DZGParser::LogicalOrExpressionContext>(0);
}

DZGParser::ExpressionContext* DZGParser::ConditionalExpressionContext::expression() {
  return getRuleContext<DZGParser::ExpressionContext>(0);
}

DZGParser::ConditionalExpressionContext* DZGParser::ConditionalExpressionContext::conditionalExpression() {
  return getRuleContext<DZGParser::ConditionalExpressionContext>(0);
}


size_t DZGParser::ConditionalExpressionContext::getRuleIndex() const {
  return DZGParser::RuleConditionalExpression;
}

void DZGParser::ConditionalExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DZGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConditionalExpression(this);
}

void DZGParser::ConditionalExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DZGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConditionalExpression(this);
}


antlrcpp::Any DZGParser::ConditionalExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DZGVisitor*>(visitor))
    return parserVisitor->visitConditionalExpression(this);
  else
    return visitor->visitChildren(this);
}

DZGParser::ConditionalExpressionContext* DZGParser::conditionalExpression() {
  ConditionalExpressionContext *_localctx = _tracker.createInstance<ConditionalExpressionContext>(_ctx, getState());
  enterRule(_localctx, 8, DZGParser::RuleConditionalExpression);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(159);
    logicalOrExpression(0);
    setState(165);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      setState(160);
      match(DZGParser::T__3);
      setState(161);
      expression(0);
      setState(162);
      match(DZGParser::T__4);
      setState(163);
      conditionalExpression();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LogicalOrExpressionContext ------------------------------------------------------------------

DZGParser::LogicalOrExpressionContext::LogicalOrExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

DZGParser::LogicalAndExpressionContext* DZGParser::LogicalOrExpressionContext::logicalAndExpression() {
  return getRuleContext<DZGParser::LogicalAndExpressionContext>(0);
}

DZGParser::LogicalOrExpressionContext* DZGParser::LogicalOrExpressionContext::logicalOrExpression() {
  return getRuleContext<DZGParser::LogicalOrExpressionContext>(0);
}


size_t DZGParser::LogicalOrExpressionContext::getRuleIndex() const {
  return DZGParser::RuleLogicalOrExpression;
}

void DZGParser::LogicalOrExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DZGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLogicalOrExpression(this);
}

void DZGParser::LogicalOrExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DZGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLogicalOrExpression(this);
}


antlrcpp::Any DZGParser::LogicalOrExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DZGVisitor*>(visitor))
    return parserVisitor->visitLogicalOrExpression(this);
  else
    return visitor->visitChildren(this);
}


DZGParser::LogicalOrExpressionContext* DZGParser::logicalOrExpression() {
   return logicalOrExpression(0);
}

DZGParser::LogicalOrExpressionContext* DZGParser::logicalOrExpression(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  DZGParser::LogicalOrExpressionContext *_localctx = _tracker.createInstance<LogicalOrExpressionContext>(_ctx, parentState);
  DZGParser::LogicalOrExpressionContext *previousContext = _localctx;
  size_t startState = 10;
  enterRecursionRule(_localctx, 10, DZGParser::RuleLogicalOrExpression, precedence);

    

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(168);
    logicalAndExpression(0);
    _ctx->stop = _input->LT(-1);
    setState(175);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        _localctx = _tracker.createInstance<LogicalOrExpressionContext>(parentContext, parentState);
        pushNewRecursionContext(_localctx, startState, RuleLogicalOrExpression);
        setState(170);

        if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
        setState(171);
        match(DZGParser::T__5);
        setState(172);
        logicalAndExpression(0); 
      }
      setState(177);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- LogicalAndExpressionContext ------------------------------------------------------------------

DZGParser::LogicalAndExpressionContext::LogicalAndExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

DZGParser::InclusiveOrExpressionContext* DZGParser::LogicalAndExpressionContext::inclusiveOrExpression() {
  return getRuleContext<DZGParser::InclusiveOrExpressionContext>(0);
}

DZGParser::LogicalAndExpressionContext* DZGParser::LogicalAndExpressionContext::logicalAndExpression() {
  return getRuleContext<DZGParser::LogicalAndExpressionContext>(0);
}


size_t DZGParser::LogicalAndExpressionContext::getRuleIndex() const {
  return DZGParser::RuleLogicalAndExpression;
}

void DZGParser::LogicalAndExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DZGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLogicalAndExpression(this);
}

void DZGParser::LogicalAndExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DZGListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLogicalAndExpression(this);
}


antlrcpp::Any DZGParser::LogicalAndExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DZGVisitor*>(visitor))
    return parserVisitor->visitLogicalAndExpression(this);
  else
    return visitor->visitChildren(this);
}


DZGParser::LogicalAndExpressionContext* DZGParser::logicalAndExpression() {
   return logicalAndExpression(0);
}

DZGParser::LogicalAndExpressionContext* DZGParser::logicalAndExpression(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  DZGParser::LogicalAndExpressionContext *_localctx = _tracker.createInstance<LogicalAndExpressionContext>(_ctx, parentState);
  DZGParser::LogicalAndExpressionContext *previousContext = _localctx;
  size_t startState = 12;
  enterRecursionRule(_localctx, 12, DZGParser::RuleLogicalAndExpression, precedence);

    
